# talon-tags

./: .gitignore  CMakeLists.txt  Makefile
src/: data.cpp  data.h  main.cpp
